<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="#fff" >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/display"/>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/seven"
            android:text="@string/seven"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/eight"
            android:text="@string/eight"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/nine"
            android:text="@string/nine"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/div"
            android:text="@string/div"
            android:textSize="30dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/four"
            android:text="@string/four"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/five"
            android:text="@string/five"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/six"
            android:text="@string/six"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/mul"
            android:text="@string/mul"
            android:textSize="30dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/one"
            android:text="@string/one"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/two"
            android:text="@string/two"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/three"
            android:text="@string/three"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/sub"
            android:text="@string/sub"
            android:textSize="30dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/Reset"
            android:text="@string/Reset"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/zero"
            android:text="@string/zero"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/equal"
            android:text="@string/equal"
            android:textSize="30dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id = "@+id/add"
            android:text="@string/add"
            android:textSize="30dp"/>
    </LinearLayout>
</LinearLayout>